[package]
name = "task_ba"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.219"
serde_jsonc = "1.0.108"
solana-stream-sdk = "0.5.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
