[package]
name = "task_ba"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.91"
bs58 = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
lapin = "3.0.0"
rustls = "0.23.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_jsonc = "1.0.108"
solana-stream-sdk = "0.5.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tonic = "0.12.3"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "rabbit_consumer"
path = "src/bin/rabbit_consumer.rs"